--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Primer Portafolio</title>
+	<title>CV Alberto Caro Barrera</title>
 	<link rel="stylesheet" type="text/css" href="style.	css">
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
